--- a/src/index.html
+++ b/src/index.html
@@ -269,7 +269,7 @@
 	<header class="header">
 		<div class="container">
 			<nav class="header__menu">
-				<div class="header__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
+				<div class="header__menu_logo"><a href="https://nerielt.ru/"><img src="./img/Logo.svg" alt="logo"></a></div>
 				<div class="header__menu_links">
 					<ul class="header__menu_links-order">
 						<li><a href="#option">Примеры</a></li>
@@ -900,7 +900,7 @@
 								приятнее. На весь срок ипотеки!
 							</div>
 						</div>
-						<img src="./icons/maneytabl.svg" alt="maneytabl">
+						<img src="./icons/maneytabl.png" alt="maneytabl">
 					</div>
 					<div class="carousel-item">
 						<div class="why__wrapper_card blue">
@@ -948,12 +948,14 @@
 						стандартной ставке. И ежемесячный платёж тоже будет меньше, а значит и ваша жизнь становится проще и
 						приятнее. На весь срок ипотеки!
 					</div>
+					<img class="why__wrapper_card-img" src="./icons/maneytabl.png" alt="maneytabl">
 				</div>
 				<div class="why__wrapper_card blue">
 					<div class="why__wrapper_card-title">Снимайте у себя</div>
 					<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать
 						такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя
 						квартира по окончанию срока.</div>
+						<img class="why__wrapper_card-img" src="./icons/Key.svg" alt="Key">
 				</div>
 				<div class="why__wrapper_card orange">
 					<div class="why__wrapper_card-title">Инфляция — за вас!</div>
@@ -961,6 +963,7 @@
 						выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше
 						цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
 						ощутимой для вас.</div>
+						<img class="why__wrapper_card-img" src="./icons/laptop.png" alt="laptop">
 				</div>
 
 				<div class="why__wrapper_card violet">
@@ -969,6 +972,7 @@
 						40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем
 						вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда востребованы.
 					</div>
+					<img class="why__wrapper_card-img" src="./icons/save.png" alt="save">
 				</div>
 				<div class="why__wrapper_card wooman">
 					<img src="./img/super.png" alt="superwoomen" class="why__wrapper_img">
