fix last buttom

--- a/src/index.html
+++ b/src/index.html
@@ -1134,7 +1134,9 @@
 					<div class="flat__gif">
 						<img src="./gif/belka_gif.gif" alt="gif">
 					</div>
-					<div class="flat__btn">Выбрать квартиру</div>
+					<div class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Выбрать квартиру</div>
+					
+					<!-- <div class="flat__btn">Выбрать квартиру</div> -->
 					<img class="flat__img" src="./img/final.png" alt="final">
 				</div>
 				<img class="mobailimg" src="./img/final.png" alt="final">
