--- a/src/index.html
+++ b/src/index.html
@@ -1132,7 +1132,7 @@
 					</div>
 
 					<div class="flat__gif">
-						<img src="./gif/belka_gif.gif" alt="gif">
+						<img src="./gif/belka_new.gif" alt="gif">
 					</div>
 					<div class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Выбрать квартиру</div>
 					
