--- a/src/index.html
+++ b/src/index.html
@@ -1107,7 +1107,7 @@
 					<div class="flat__years">
 						<div class="flat__years_year">
 							<div class="form_radio_btn-year">
-								<input id="radio-5" type="radio" name="radio" value="Заселен">
+								<input id="radio-5" type="radio" name="radio" value="Заселен" checked>
 								<label for="radio-5">Заселён</label>
 							</div>
 						</div>
