--- a/src/index.html
+++ b/src/index.html
@@ -106,8 +106,7 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="./config.html">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="img"><img src="./img/fanny.png" alt="fanny"></div>
@@ -142,8 +141,7 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="./config.html">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -179,8 +177,7 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="./config.html">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -216,8 +213,7 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="./config.html">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -254,8 +250,7 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
-									href="./config.html">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -495,8 +490,7 @@
 								<p>Стоимость <br><span>3 580 000 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a data-bs-toggle="modal" data-bs-target="#oneModal" class="mininformation__el_img"
-									href="#oneModal">
+								<a data-bs-toggle="modal" data-bs-target="#oneModal" class="mininformation__el_img" href="#oneModal">
 									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
@@ -621,8 +615,7 @@
 								<p>Стоимость <br><span>5 267 680 ₽</span></p>
 							</div>
 							<div class="mininformation__el d-flex ">
-								<a data-bs-toggle="modal" data-bs-target="#twoModal" class="mininformation__el_img"
-									href="#twoModal">
+								<a data-bs-toggle="modal" data-bs-target="#twoModal" class="mininformation__el_img" href="#twoModal">
 									<svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path
 											d="M0 14V28H3.5H7V26.8525V25.7049L4.66475 25.6934L2.32377 25.6762L2.30656 21.5852L2.29508 17.5H5.82377H9.35246V18.0738V18.6475H10.5H11.6475V16.8975V15.1475H7H2.35246V8.75V2.35246H8.75H15.1475V4.07377V5.79508H14.5738H14V6.97131V8.14754H15.75H17.5V5.22131V2.29508L21.591 2.30656L25.6762 2.32377L25.6934 4.65902L25.7049 7H23.9549H22.2049V8.17623V9.35246H23.9549H25.7049V12.25V15.1475H21.6025H17.5V13.3975V11.6475L16.341 11.659L15.1762 11.6762L15.159 18.6877L15.1475 25.7049H12.8238H10.5V26.8525V28H14H17.5V22.75V17.5H22.75H28V8.75V1.90735e-06H14H0V14Z"
@@ -955,7 +948,7 @@
 					<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать
 						такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя
 						квартира по окончанию срока.</div>
-						<img class="why__wrapper_card-img" src="./icons/Key.svg" alt="Key">
+					<img class="why__wrapper_card-img" src="./icons/Key.svg" alt="Key">
 				</div>
 				<div class="why__wrapper_card orange">
 					<div class="why__wrapper_card-title">Инфляция — за вас!</div>
@@ -963,7 +956,7 @@
 						выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше
 						цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
 						ощутимой для вас.</div>
-						<img class="why__wrapper_card-img" src="./icons/laptop.png" alt="laptop">
+					<img class="why__wrapper_card-img" src="./icons/laptop.png" alt="laptop">
 				</div>
 
 				<div class="why__wrapper_card violet">
@@ -1034,15 +1027,16 @@
 						<br>
 						Пройдите анализ кредитной истории и получите бесплатную консультацию специалиста. Это бесплатно.
 					</div>
-					<a class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить кредитную
+					<a class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить
+						кредитную
 						историю
 					</a>
 				</div>
 				<div class="exam__wrapper_text-img">
 					<div class="exam__wrapper_text-title grid">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
-					<img src="./img/exam.png" alt="exampl" >
+					<img src="./img/exam.png" alt="exampl">
 				</div>
-		
+
 			</div>
 
 		</div>
@@ -1135,7 +1129,7 @@
 						<img src="./gif/belka_new.gif" alt="gif">
 					</div>
 					<div class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Выбрать квартиру</div>
-					
+
 					<!-- <div class="flat__btn">Выбрать квартиру</div> -->
 					<img class="flat__img" src="./img/final.png" alt="final">
 				</div>
@@ -1147,7 +1141,8 @@
 	<section class="foother">
 		<div class="container">
 			<nav class="header__menu">
-				<div class="header__menu_logo"><img src="./img/Logo.svg" alt="logo"></div>
+				<div class="header__menu_logo"><a href="https://nerielt.ru/"><img src="./img/Logo.svg" alt="logo">
+					</a></div>
 				<div class="header__menu_links">
 					<ul class="header__menu_links-order">
 						<li><a href="#option">Примеры</a></li>
@@ -1155,16 +1150,16 @@
 						<li><a href="#object">Объекты</a> </li>
 						<li><a href="#flat">Подобрать квартиру</a></li>
 					</ul>
-	
+
 				</div>
 				<div class="d-flex align-items-center gap-3">
 					<a class="header__menu_number" href="tel:+78005505003">8(800) 550-50-03</a>
 				</div>
-			
+
 			</nav>
-			<div class="confid"><a href="./config.html">Политика конфиденциальности</a></div>
+			<div class="confid"><a href="./config.html" target="_blank">Политика конфиденциальности</a></div>
 		</div>
-	</section> 
+	</section>
 
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/script.js"></script>
