--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/slick.min.css">
 	<link rel="stylesheet" href="./css/style.min.css">
 	<title>ЭКОИПОТЕКА</title>
 </head>
@@ -106,7 +107,8 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="img"><img src="./img/fanny.png" alt="fanny"></div>
@@ -141,7 +143,8 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -177,7 +180,8 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -213,7 +217,8 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -250,7 +255,8 @@
 								</div>
 							</div>
 							<button type="submit" class="btn">Отправить</button>
-							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a href="./config.html" target="_blank">персональных данных</a></div>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="./config.html" target="_blank">персональных данных</a></div>
 						</form>
 					</div>
 					<div class="think">
@@ -873,65 +879,46 @@
 			<div class="why__title" id="whyeco">Очевидная выгода</div>
 
 
-			<div id="carouselExampleIndicators" class="carousel slide">
-				<div class="carousel-indicators">
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-						aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-						aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-						aria-label="Slide 3"></button>
-					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-						aria-label="Slide 4"></button>
-				</div>
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<div class="why__wrapper_card green">
-							<div class="why__wrapper_card-title">Платите меньше</div>
-							<div class="why__wrapper_card-subtitle">С «Экоипотекой» итоговая переплата будет в разы меньше, чем при
-								стандартной ставке. И ежемесячный платёж тоже будет меньше, а значит и ваша жизнь становится проще и
-								приятнее. На весь срок ипотеки!
-							</div>
+			<div class="car">
+				<div>
+					<div class="why__wrapper_card green mt-5">
+						<div class="why__wrapper_card-title">Платите меньше</div>
+						<div class="why__wrapper_card-subtitle">С «Экоипотекой» итоговая переплата будет в разы меньше, чем при
+							стандартной ставке. И ежемесячный платёж тоже будет меньше, а значит и ваша жизнь становится проще и
+							приятнее. На весь срок ипотеки!
 						</div>
-						<img src="./icons/maneytabl.png" alt="maneytabl">
-					</div>
-					<div class="carousel-item">
-						<div class="why__wrapper_card blue">
-							<div class="why__wrapper_card-title">Снимайте у себя</div>
-							<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А
-								снимать
-								такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется
-								своя
-								квартира по окончанию срока.</div>
-						</div>
-						<img src="./icons/Key.svg" alt="key">
-					</div>
-					<div class="carousel-item">
-						<div class="why__wrapper_card orange">
-							<div class="why__wrapper_card-title">Инфляция — за вас!</div>
-							<div class="why__wrapper_card-subtitle">Реальная инфляция в России 15% в год. Оформляя Экоипотеку, вы
-								выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем
-								выше
-								цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
-								ощутимой для вас.</div>
-						</div>
-						<img src="./icons/laptop.png" alt="laptop">
-					</div>
-					<div class="carousel-item">
-						<div class="why__wrapper_card violet">
-							<div class="why__wrapper_card-title">Выгодное вложение</div>
-							<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают
-								на
-								40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в
-								будущем
-								вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда
-								востребованы.
-							</div>
-						</div>
-						<img src="./icons/save.png" alt="save">
+						<img class="why__wrapper_card-img" src="./icons/maneytabl.png" alt="maneytabl">
 					</div>
 				</div>
-
+				<div>
+					<div class="why__wrapper_card blue mt-5">
+						<div class="why__wrapper_card-title">Снимайте у себя</div>
+						<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать
+							такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя
+							квартира по окончанию срока.</div>
+						<img class="why__wrapper_card-img" src="./icons/Key.svg" alt="Key">
+					</div>
+				</div>
+				<div>
+					<div class="why__wrapper_card orange mt-5">
+						<div class="why__wrapper_card-title">Инфляция — за вас!</div>
+						<div class="why__wrapper_card-subtitle">Реальная инфляция в России 15% в год. Оформляя Экоипотеку, вы
+							выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше
+							цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
+							ощутимой для вас.</div>
+						<img class="why__wrapper_card-img" src="./icons/laptop.png" alt="laptop">
+					</div>
+				</div>
+				<div>
+					<div class="why__wrapper_card violet mt-5">
+						<div class="why__wrapper_card-title">Выгодное вложение</div>
+						<div class="why__wrapper_card-subtitle">По статистике за последние 3 года квартиры в Краснодаре дорожают на
+							40% в год. Покупая квартиру, вы не только сохраняете деньги, но и зарабатываете на росте цены. А в будущем
+							вы легко и выгодно продадите её, ведь квартиры в районах с развитой инфраструктурой, всегда востребованы.
+						</div>
+						<img class="why__wrapper_card-img" src="./icons/save.png" alt="save">
+					</div>
+				</div>
 			</div>
 
 			<div class="why__wrapper">
@@ -1162,6 +1149,9 @@
 	</section>
 
 	<script src="./js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="./js/slick.min.js"></script>
 	<script src="./js/script.js"></script>
 </body>
 
