links menu final

--- a/src/index.html
+++ b/src/index.html
@@ -340,11 +340,11 @@
 
 	<div class="menu__overlay"></div>
 
-	<section class="benefit">
+	<section class="benefit" id="option">
 		<div class="container">
-			<div class="benefit__title">Очевидная выгода</div>
+			<div class="benefit__title" >Очевидная выгода</div>
 			<div class="benefit__nav">
-				<ul class="nav" id="option">
+				<ul class="nav" >
 					<li class="nav-item">
 						<a class="nav-link active" href="#studia" role="tab" data-bs-toggle="tab">Студия</a>
 					</li>
@@ -874,9 +874,9 @@
 		</div>
 	</section>
 
-	<section class="why">
+	<section class="why" id="whyeco">
 		<div class="container">
-			<div class="why__title" id="whyeco">Очевидная выгода</div>
+			<div class="why__title">Очевидная выгода</div>
 
 
 			<div class="car">
