--- a/src/index.html
+++ b/src/index.html
@@ -876,7 +876,7 @@
 
 	<section class="why" id="whyeco">
 		<div class="container">
-			<div class="why__title">Очевидная выгода</div>
+			<div class="why__title">Почему экоипотека</div>
 
 
 			<div class="car">
