--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,41 @@
 		</div>
 	</div>
 
+	<div class="modal fade" id="query" tabindex="-1" aria-labelledby="requestLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered justify-content-center">
+			<div class="modal-content wid">
+				<button type="button" class="btn-close position-absolute inclos" data-bs-dismiss="modal"
+					aria-label="Close"></button>
+				<div class="d-flex align-items-center justify-content-center">
+					<div class="modal-body pad">
+						<form class="modaleco" id="query">
+							<div class="modaleco__title">Экоипотека 0.1%</div>
+							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить по СМС топ 10 квартир,
+								а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="text" name="name" required class="form-control" id="recipient-name"
+										placeholder="Ваше имя">
+								</div>
+
+							</div>
+							<div class="form-group">
+								<div class="mb-3">
+									<input type="phone" name="phone" required class="form-control" id="message-text"
+										placeholder="Ваш номер телефона"></input>
+								</div>
+							</div>
+							<button type="submit" class="btn">Отправить</button>
+							<div class="modaleco__descr">Нажимая кнопку «Отправить», вы даёте своё согласие на обработку <a
+									href="./config.html" target="_blank">персональных данных</a></div>
+						</form>
+					</div>
+					<div class="img"><img src="./img/fanny.png" alt="fanny"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<div class="modal fade" id="studia_room" tabindex="-1" aria-labelledby="oneroomLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered justify-content-center">
@@ -1115,7 +1150,7 @@
 					<div class="flat__gif">
 						<img src="./gif/belka_new.gif" alt="gif">
 					</div>
-					<div class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Выбрать квартиру</div>
+					<div class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#query">Выбрать квартиру</div>
 
 					<!-- <div class="flat__btn">Выбрать квартиру</div> -->
 					<img class="flat__img" src="./img/final.png" alt="final">
@@ -1151,6 +1186,7 @@
 	<script src="./js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="./js/jquery.maskedinput.min.js"></script>
 	<script type="text/javascript" src="./js/slick.min.js"></script>
 	<script src="./js/script.js"></script>
 </body>
