--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="title" content="ЭКОИПОТЕКА">
+  <meta name="description" content="Экоипотека — это рекордно низкая ставка 0,1% на весь срок! Экоипотека экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно гасить её в любом комфортном режиме: досрочно или в течение всего срока.">
+  <meta property="og:image" content="./img/final.png">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png">
