--- a/src/index.html
+++ b/src/index.html
@@ -466,8 +466,8 @@
 										</div>
 
 									</div>
-									<a class="wrapper__card_btn" type="button" data-bs-toggle="modal" data-bs-target="#studia_room">Подать
-										заявку</a>
+									<button class="wrapper__card_btn" type="button" data-bs-toggle="modal" data-bs-target="#studia_room">Подать
+										заявку</button>
 
 								</div>
 							</div>
@@ -520,8 +520,8 @@
 
 									</div>
 
-									<a class="eco__card_btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Подать
-										заявку</a>
+									<button class="eco__card_btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Подать
+										заявку</button>
 								</div>
 							</div>
 						</div>
@@ -1020,12 +1020,12 @@
 								<br>
 								Плати за своё меньше, чем за съёмное. А мы вам в этом поможем 😉
 							</div>
-							<a class="impl__fon_item-descr-btn" type="button" data-bs-toggle="modal"
-								data-bs-target="#request">Получить подборку бесплатно по СМС</a>
+							<button class="impl__fon_item-descr-btn" type="button" data-bs-toggle="modal"
+								data-bs-target="#request">Получить подборку бесплатно по СМС</button>
 
 						</div>
-						<a class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
-							data-bs-target="#request">Получить подборку бесплатно по СМС</a>
+						<button class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
+							data-bs-target="#request">Получить подборку бесплатно по СМС</button>
 					</div>
 
 					<div class="impl__fon_gif">
@@ -1052,10 +1052,10 @@
 						<br>
 						Пройдите анализ кредитной истории и получите бесплатную консультацию специалиста. Это бесплатно.
 					</div>
-					<a class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить
+					<button class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить
 						кредитную
 						историю
-					</a>
+					</button>
 				</div>
 				<div class="exam__wrapper_text-img">
 					<div class="exam__wrapper_text-title grid">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
