--- a/src/index.html
+++ b/src/index.html
@@ -350,8 +350,8 @@
 						экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты
 						можно
 						гасить её в любом комфортном режиме: досрочно или в течение всего срока.</div>
-					<a class="content__wrapper_btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Подать
-						заявку</a>
+					<button class="content__wrapper_btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Подать
+						заявку</button>
 					<div class="content__wrapper_terms">
 						<div class="content__wrapper_terms-item">
 							<div class="content__wrapper_terms-item-img"><img src="./img/rocket.svg" alt="rocket"></div>
@@ -1024,8 +1024,8 @@
 								data-bs-target="#request">Получить подборку бесплатно по СМС</a>
 
 						</div>
-						<a class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
-							data-bs-target="#request">Получить подборку бесплатно по СМС</a>
+						<button class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
+							data-bs-target="#request">Получить подборку бесплатно по СМС</button>
 					</div>
 
 					<div class="impl__fon_gif">
@@ -1052,10 +1052,10 @@
 						<br>
 						Пройдите анализ кредитной истории и получите бесплатную консультацию специалиста. Это бесплатно.
 					</div>
-					<a class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить
+					<button class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить
 						кредитную
 						историю
-					</a>
+					</button>
 				</div>
 				<div class="exam__wrapper_text-img">
 					<div class="exam__wrapper_text-title grid">Осталось узнать, одобрят ли банки Вам ипотеку?</div>
