--- a/src/index.html
+++ b/src/index.html
@@ -473,7 +473,7 @@
 							</div>
 
 							<div class="eco">
-								<!-- <img src="./img/list2.png" alt="list" class="eco_img"> -->
+								<img src="./img/list2.png" alt="list" class="eco_img">
 
 								<div class="eco__card">
 									<div class="eco__card_title">Экоипотека</div>
