--- a/src/index.html
+++ b/src/index.html
@@ -1153,7 +1153,7 @@
 					<div class="flat__gif">
 						<img src="./gif/belka_new.gif" alt="gif">
 					</div>
-					<div class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#query">Выбрать квартиру</div>
+					<button class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#query">Выбрать квартиру</button>
 
 					<!-- <div class="flat__btn">Выбрать квартиру</div> -->
 					<img class="flat__img" src="./img/final.png" alt="final">
