--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
 					<div class="modal-body pad">
 						<form class="modaleco">
 							<div class="modaleco__title">Экоипотека 0.1%</div>
-							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить по СМС топ 10 квартир,
+							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить на WhatsApp топ 10 квартир,
 								а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
 							<div class="form-group">
 								<div class="mb-3">
@@ -129,7 +129,7 @@
 					<div class="modal-body pad">
 						<form class="modaleco" id="query">
 							<div class="modaleco__title">Экоипотека 0.1%</div>
-							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить по СМС топ 10 квартир,
+							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить на WhatsApp топ 10 квартир,
 								а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
 							<div class="form-group">
 								<div class="mb-3">
