--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,28 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="title" content="ЭКОИПОТЕКА">
-  <meta name="description" content="Экоипотека — это рекордно низкая ставка 0,1% на весь срок! Экоипотека экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно гасить её в любом комфортном режиме: досрочно или в течение всего срока.">
-  <meta property="og:image" content="./img/final.png">
+	<meta name="description"
+		content="Экоипотека — это рекордно низкая ставка 0,1% на весь срок! Экоипотека экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно гасить её в любом комфортном режиме: досрочно или в течение всего срока.">
+	<meta property="og:image" content="./icons/og.svg">
+
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://metatags.io/">
+	<meta property="og:title" content="ЭКОИПОТЕКА">
+	<meta property="og:description"
+		content="Экоипотека — это рекордно низкая ставка 0,1% на весь срок! Экоипотека экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно гасить её в любом комфортном режиме: досрочно или в течение всего срока.">
+	<meta property="og:image"
+		content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://metatags.io/">
+	<meta property="twitter:title" content="ЭКОИПОТЕКА">
+	<meta property="twitter:description"
+		content="Экоипотека — это рекордно низкая ставка 0,1% на весь срок! Экоипотека экологична во всём — честный процент и неизменяющийся ежемесячный платёж! А из-за минимальной переплаты можно гасить её в любом комфортном режиме: досрочно или в течение всего срока.">
+	<meta property="twitter:image"
+		content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
 	<link rel="apple-touch-icon" sizes="57x57" href="./icons/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="./icons/favicon/apple-icon-60x60.png">
@@ -26,7 +46,9 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+		integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap" rel="stylesheet">
@@ -94,7 +116,8 @@
 					<div class="modal-body pad">
 						<form class="modaleco">
 							<div class="modaleco__title">Экоипотека 0.1%</div>
-							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить на WhatsApp топ 10 квартир,
+							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить на WhatsApp топ 10
+								квартир,
 								а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
 							<div class="form-group">
 								<div class="mb-3">
@@ -129,7 +152,8 @@
 					<div class="modal-body pad">
 						<form class="modaleco" id="query">
 							<div class="modaleco__title">Экоипотека 0.1%</div>
-							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить на WhatsApp топ 10 квартир,
+							<div class="modaleco__subtitle mb-4">Заполните контактные данные, чтобы получить на WhatsApp топ 10
+								квартир,
 								а также проверить свою кредитную историю и получить экспертную консультацию бесплатно.</div>
 							<div class="form-group">
 								<div class="mb-3">
@@ -380,9 +404,9 @@
 
 	<section class="benefit" id="option">
 		<div class="container">
-			<div class="benefit__title" >Очевидная выгода</div>
+			<div class="benefit__title">Очевидная выгода</div>
 			<div class="benefit__nav">
-				<ul class="nav" >
+				<ul class="nav">
 					<li class="nav-item">
 						<a class="nav-link active" href="#studia" role="tab" data-bs-toggle="tab">Студия</a>
 					</li>
@@ -466,7 +490,8 @@
 										</div>
 
 									</div>
-									<button class="wrapper__card_btn" type="button" data-bs-toggle="modal" data-bs-target="#studia_room">Подать
+									<button class="wrapper__card_btn" type="button" data-bs-toggle="modal"
+										data-bs-target="#studia_room">Подать
 										заявку</button>
 
 								</div>
@@ -931,7 +956,8 @@
 				<div>
 					<div class="why__wrapper_card blue mt-5">
 						<div class="why__wrapper_card-title">Снимайте у себя</div>
-						<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А снимать
+						<div class="why__wrapper_card-subtitle">С Экоипотекой платёж за студию составит от 8 тыс ₽ в месяц. А
+							снимать
 							такую же студию в Краснодаре стоит 10 — 12 тысяч. Выгода очевидна! А с «Экоипотекой» у вас останется своя
 							квартира по окончанию срока.</div>
 						<img class="why__wrapper_card-img" src="./icons/Key.svg" alt="Key">
@@ -941,7 +967,8 @@
 					<div class="why__wrapper_card orange mt-5">
 						<div class="why__wrapper_card-title">Инфляция — за вас!</div>
 						<div class="why__wrapper_card-subtitle">Реальная инфляция в России 15% в год. Оформляя Экоипотеку, вы
-							выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем выше
+							выплачиваете банку 0,1% в год за использование кредита. Рост цен влияет и на ваш платеж по ипотеке: чем
+							выше
 							цены, тем больше обесценивается ваш ежемесячный платеж. Через несколько лет эта сумма станет еще менее
 							ощутимой для вас.</div>
 						<img class="why__wrapper_card-img" src="./icons/laptop.png" alt="laptop">
@@ -1052,7 +1079,8 @@
 						<br>
 						Пройдите анализ кредитной истории и получите бесплатную консультацию специалиста. Это бесплатно.
 					</div>
-					<button class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal" data-bs-target="#request">Проверить
+					<button class="exam__wrapper_text-btn" type="button" data-bs-toggle="modal"
+						data-bs-target="#request">Проверить
 						кредитную
 						историю
 					</button>
@@ -1153,7 +1181,8 @@
 					<div class="flat__gif">
 						<img src="./gif/belka_new.gif" alt="gif">
 					</div>
-					<button class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#query">Выбрать квартиру</button>
+					<button class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#query">Выбрать
+						квартиру</button>
 
 					<!-- <div class="flat__btn">Выбрать квартиру</div> -->
 					<img class="flat__img" src="./img/final.png" alt="final">
