--- a/src/index.html
+++ b/src/index.html
@@ -1056,7 +1056,7 @@
 		<div class="container">
 			<div class="impl" id="object">
 				<div class="impl__fon">
-					<img src="./img/minilist.png" alt="litlelist" class="impl__fon_img">
+
 					<div class="impl__fon_item">
 						<div class="impl__fon_item-title">Где бы вы хотели жить?</div>
 						<div class="impl__fon_item-descr">
@@ -1072,20 +1072,31 @@
 								Плати за своё меньше, чем за съёмное. А мы вам в этом поможем 😉
 							</div>
 							<button class="impl__fon_item-descr-btn" type="button" data-bs-toggle="modal"
-								data-bs-target="#request">Получить подборку бесплатно по СМС</button>
+								data-bs-target="#request">Получить подборку бесплатно на WhatsApp</button>
 
 						</div>
 						<button class="impl__fon_item-descr-btn grid" type="button" data-bs-toggle="modal"
-							data-bs-target="#request">Получить подборку бесплатно по СМС</button>
+							data-bs-target="#request">Получить подборку бесплатно на WhatsApp</button>
+					</div>
+
+					<div class="impl__fon_iframe">
+						<iframe width="100%" height="490" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
 					</div>
 
 					<div class="impl__fon_gif">
 						<div class="impl__fon_item-title grid">Где бы вы хотели жить?</div>
-						<img src="./gif/НЕРИЭЛТ_ролик (1).gif" alt="gif">
+						<iframe width="100%" height="490" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
 					</div>
-
 				</div>
+
 			</div>
+		</div>
 		</div>
 	</section>
 
@@ -1205,8 +1216,7 @@
 					<div class="flat__gif">
 						<img src="./gif/belka_new.gif" alt="gif">
 					</div>
-					<button class="flat__btn" type="button" data-bs-toggle="modal"
-						data-bs-target="#query">Выбрать
+					<button class="flat__btn" type="button" data-bs-toggle="modal" data-bs-target="#query">Выбрать
 						квартиру</button>
 
 					<!-- <div class="flat__btn">Выбрать квартиру</div> -->
