--- a/src/index.html
+++ b/src/index.html
@@ -1080,7 +1080,7 @@
 					</div>
 
 					<div class="impl__fon_iframe">
-						<iframe width="100%" height="490" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
+						<iframe width="100%" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
 							frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
@@ -1088,7 +1088,7 @@
 
 					<div class="impl__fon_gif">
 						<div class="impl__fon_item-title grid">Где бы вы хотели жить?</div>
-						<iframe width="100%" height="490" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
+						<iframe width="100%" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
 							frameborder="0"
 							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 							allowfullscreen></iframe>
