--- a/src/index.html
+++ b/src/index.html
@@ -1080,18 +1080,16 @@
 					</div>
 
 					<div class="impl__fon_iframe">
-						<iframe width="100%" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
-							frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe>
+						<video loop="loop" muted autoplay="autoplay" preload="metadata" controls width="100%">
+							<source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2'>
+						</video>
 					</div>
 
 					<div class="impl__fon_gif">
 						<div class="impl__fon_item-title grid">Где бы вы хотели жить?</div>
-						<iframe width="100%" src="https://www.youtube.com/embed/3FkZv0oeiro?autoplay=1&mute=1"
-							frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe>
+						<video loop="loop" muted autoplay="autoplay" preload="metadata" controls width="100%">
+							<source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2'>
+						</video>
 					</div>
 				</div>
 
