message in footer

--- a/src/config.html
+++ b/src/config.html
@@ -330,6 +330,12 @@
     </p>
   </div>
 
+  <section>
+		<div class="container" style="text-align: center; color: grey; padding:0 20px 20px 20px">
+			Сайт не осуществляет выдачу крудитов и займов, носит информативный характер
+		</div>
+	</section>
+
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
     (function (m, e, t, r, i, k, a) {
