--- a/src/index.html
+++ b/src/index.html
@@ -1248,6 +1248,12 @@
 		</div>
 	</section>
 
+	<section>
+		<div class="container" style="text-align: center; color: grey; padding:0 20px 20px 20px">
+			Сайт не осуществляет выдачу крудитов и займов, носит информативный характер
+		</div>
+	</section>
+
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript">
 		(function (m, e, t, r, i, k, a) {
