--- a/src/index.html
+++ b/src/index.html
@@ -1144,7 +1144,7 @@
 
 					<div class="impl__fon_iframe">
 						<video loop="loop" playsinline muted autoplay="autoplay" preload="metadata" controls width="100%">
-							<source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2'>
+							<source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4'>
 						</video>
 					</div>
 
