--- a/src/index.html
+++ b/src/index.html
@@ -1143,15 +1143,15 @@
 					</div>
 
 					<div class="impl__fon_iframe">
-						<video loop="loop" playsinline muted autoplay="autoplay" preload="metadata" controls width="100%">
-							<source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4'>
+						<video src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" loop="loop" playsinline muted autoplay="autoplay" preload="metadata" controls width="100%">
+							<!-- <source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4'> -->
 						</video>
 					</div>
 
 					<div class="impl__fon_gif">
 						<div class="impl__fon_item-title grid">Где бы вы хотели жить?</div>
-						<video loop="loop" playsinline muted autoplay="autoplay" preload="metadata" controls width="100%">
-							<source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2'>
+						<video src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" loop="loop" playsinline muted autoplay="autoplay" preload="metadata" controls width="100%">
+							<!-- <source src="./video/НЕРИЭЛТ_ролик_квадрат.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2'> -->
 						</video>
 					</div>
 				</div>
